<resources>
    <string name="app_name">Go2Joy</string>
    <string name="img_decscription"> </string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_event">Event</string>
    <string name="menu_my_page">My Page</string>
    <string name="report_a_new_hotel_title">Report a New Hotel</string>
    <string name="write_a_review">Write a Review</string>
    <string name="set_favorite">Set my favorite area</string>
    <string name="book_now">Book</string>
    <string name="recent_hotels">Recent hotels</string>
    <string name="my_favorite_hotels">My favorite hotels</string>
    <string name="choose_from_list">Choose from list</string>
    <string name="view_all">View all</string>
    <string name="promotion">Promotion</string>
    <string name="normal">Normal</string>
    <string name="hot">Hot</string>
    <string name="new_text">New</string>
    <string name="create_new">New</string>
    <string name="alphabet">Alphabet</string>
    <string name="distance">Distance</string>
    <string name="total_review">Total Review</string>
    <string name="dont_have_any_comment">Don\'t have any comment for this hotel</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="room_type">Room Type</string>
    <string name="room_no">Room No</string>
    <string name="rate">Rate</string>
    <string name="review">Review</string>
    <string name="exit">Please press again to exit.</string>
    <string name="enter_your_comment">Enter you comment</string>
    <string name="done">Done</string>
    <string name="sure_delete">Are you sure you want to delete ? Once it’s deleted, it cannot be restored.</string>
    <string name="no">No</string>
    <string name="please_choose_room_type">Please choose room type </string>
    <string name="input_comment">Please input review</string>
    <string name="reservation">Reservation</string>
    <string name="make_a_reservation">Make a Reservation</string>
    <string name="hotel">Hotel</string>
    <string name="estimated_hotel_fee">Estimated Hotel Fee</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="coupon">Coupon</string>
    <string name="change">Change</string>
    <string name="notice">Notice</string>
    <string name="hourly">Hourly</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="date_from">Date From: </string>
    <string name="date_to">Date To: </string>
    <string name="choose">Choose</string>
    <string name="area_setting">Area Setting</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="app_need_to_connect_internet_please_turn_on_the_internet">Application need to connect to internet. Please turn on the mobile internet or wifi.</string>
    <string name="facebook">Facebook</string>
    <string name="zalo">Zalo</string>
    <string name="viber">Viber</string>
    <string name="skype">Skype</string>
    <string name="sms">SMS</string>
    <string name="hour">Hour</string>
    <string name="over_night">Over night</string>
    <string name="hotel_info">Hotel Info</string>
    <string name="facilities">Facilities</string>
    <string name="app_need_to_query_location_please_turn_on_the_gps">Application need to query the location. Please turn on LOCATION and set LOCATING METHOD to \"Wi-Fi and mobile network\".</string>
    <string name="dont_have_any_hotel_in_result">Don\'t have any hotel in result</string>
    <string name="google_plus">Google +</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign-up</string>
    <string name="forgot_password">Forgot PW</string>
    <string name="login">LOG-IN</string>
    <string name="near_by">All</string>
    <string name="my_favorite">My Favorite</string>
    <string name="choose_area">Choose area</string>
    <string name="login_button">LOGIN</string>
    <string name="password">Password</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="please_enter_your_password">Please enter your password.</string>
    <string name="incorrect_email_or_password_please_try_again">Incorrect email or password. Please try again.</string>
    <string name="set_my_favorite_area">Set my favorite area</string>
    <string name="this_hotel_is_not_contract_with_appro">This hotel is not contracted with Go2Joy</string>
    <string name="update_failure">Update failure.</string>
    <string name="limit_area_user_favorite_message">Favorite list is full. To add new area, please delete some chosen areas first.</string>
    <string name="setting">Setting</string>
    <string name="push_notification">Push Notification</string>
    <string name="history">History</string>
    <string name="my_coupon">My Coupon</string>
    <string name="notice_and_qa"><![CDATA[Notice/Q&A]]></string>
    <string name="terms_privacy_policy">Terms/Privacy Policy</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="id">ID</string>
    <string name="account_setting">Account Setting</string>
    <string name="auto_log_in">Auto Log-in</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="passcode_setting">Passcode setting</string>
    <string name="unregister">Unregister</string>
    <string name="please_input_current_password">Please input current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="your_password_has_changed">Your Password has been changed successfully.</string>
    <string name="current_password_wrong">Current Password is wrong</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="enter_your_passcode_one_more_time">Enter your passcode 1 more time</string>
    <string name="want_to_unregister">After you unregister, all of your data (history, favorite, coupon, etc.) will be deleted and cannot be restored.\nAre you sure to unregister?</string>
    <string name="yes">YES</string>
    <string name="favorite_area">Favorite Area</string>
    <string name="edit">Edit</string>
    <string name="favorite_hotel">Favorite Hotels</string>
    <string name="favorite">Favorite</string>
    <string name="you_dont_have_any_favorite_hotel">You don\'t have any favorite hotels</string>
    <string name="dont_have_any_history_in_result">Don\'t have any history in result</string>
    <string name="dont_have_any_coupon_in_result">Don\'t have any coupon in result</string>
    <string name="question_answer"><![CDATA[Q&A]]></string>
    <string name="done_have_notice">Don\'t have any notice in result</string>
    <string name="done_have_question">Don\'t have any question in result</string>
    <string name="date_title">Date</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="make_private">Make it private</string>
    <string name="write_a_question">Write a question</string>
    <string name="please_input_title">Please input title</string>
    <string name="please_input_content">Please input content</string>
    <string name="service_agreement">Service Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="location">Location</string>
    <string name="detail_call">Call</string>
    <string name="detail_view">View</string>
    <string name="favorited">Favorited</string>
    <string name="unfavorited">Unfavorited</string>
    <string name="search_title">Search Hotel</string>
    <string name="search_hint_text">Search by name, address…</string>
    <string name="call_hotel">Do you want to call</string>
    <string name="email_sign_up">Email Sign-up</string>
    <string name="duplicate_check">Duplicate check</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_service_policy">I Hereby agree Service Agreement/Privacy Policy.</string>
    <string name="agree_service_policy_button">See Service Agreement/Privacy Policy</string>
    <string name="next">Next</string>
    <string name="please_input_email">Please input email</string>
    <string name="email_format_not_valid">Email format is not valid.</string>
    <string name="password_format_message">Password must be 6~16 character of English and numbers.</string>
    <string name="password_format_not_valid">Password format is not valid.</string>
    <string name="the_email_is_available">The email is available to register.</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="please_duplicate_check_email">Please check email first.</string>
    <string name="password_and_confirm_not_match">Password and Confirm Password not match.</string>
    <string name="member_profile">Member Profile</string>
    <string name="nick_name">Nickname</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="address">Address</string>
    <string name="optional">(Optional)</string>
    <string name="mobile">Mobile</string>
    <string name="please_input_nickname">Please input nickname</string>
    <string name="please_input_mobile">Please input phone number</string>
    <string name="the_nickname_is_available">The nickname is ready to register.</string>
    <string name="nickname_already_exists">Nickname already exists</string>
    <string name="mobile_already_exists">Phone number already exists</string>
    <string name="please_check_nickname_first">Please check nickname first.</string>
    <string name="please_choose_birthday">Please choose birthday</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="input_email_id">Input your email ID.</string>
    <string name="send">Send</string>
    <string name="temporagy_sent">Your temporary password has been sent to your email as below.</string>
    <string name="token_invalid">Your logined has been expired. Please login again.</string>
    <string name="reporter">Reporter</string>
    <string name="hotel_name">Hotel name</string>
    <string name="choose_location">Choose Location</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="telephone">Telephone</string>
    <string name="login_with">Login with</string>
    <string name="txt_1_4_booking_id">Booking ID</string>
    <string name="txt_1_4_member_unique_id">Member Unique ID</string>
    <string name="txt_1_4_date">Date</string>
    <string name="txt_1_4_time">Time</string>
    <string name="txt_1_4_hotel_name">Hotel Name</string>
    <string name="txt_1_4_room_type">Room Type</string>
    <string name="txt_1_4_price">Price</string>
    <string name="txt_1_4_coupon_discount">Coupon Discount</string>
    <string name="txt_1_4_total_payment">Total Payment</string>
    <string name="txt_1_4_payment_status">Payment Status</string>
    <string name="txt_6_3_1_paynow">Pay now</string>
    <string name="txt_6_12_stamp_collection">Stamp Collection</string>
    <string name="txt_6_12_stamp_value">Stamp redeem</string>
    <string name="txt_6_12_stamp_policy_value">Stamp exchange value</string>
    <string name="txt_6_12_stamp_policy_condision">Stamp condition</string>
    <string name="msg_3_9_input_phone_number">Please input phone number to confirm booking</string>
</resources>