<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_50p">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        app:cardCornerRadius="5dp"
        app:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_12">

            <com.appromobile.hotel.widgets.TextViewSFMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg_3_9_input_phone_number"
                android:textColor="@color/bk_85p" />

            <com.appromobile.hotel.widgets.EditTextSFRegular
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:hint="@string/telephone"
                android:gravity="center"
                android:background="@drawable/box_black_bg"
                android:padding="@dimen/margin_4"
                android:inputType="phone" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bk_50p" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f2f2f2"
                android:orientation="horizontal">

                <com.appromobile.hotel.widgets.TextViewSFBold
                    android:id="@+id/tvCance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_white_left_radius"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/bk_85p"
                    android:textSize="15sp" />

                <com.appromobile.hotel.widgets.TextViewSFBold
                    android:id="@+id/tvNext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_org_right_radius"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/wh"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
