<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_stamp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_50p">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        app:elevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <!--Stamp Collection-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:orientation="horizontal">

                <com.appromobile.hotel.widgets.TextViewSFHeavy
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_6_12_stamp_collection" />

                <com.appromobile.hotel.widgets.TextViewSFMedium
                    android:id="@+id/tvNumStamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--Stamp Value-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:orientation="vertical">

                <com.appromobile.hotel.widgets.TextViewSFHeavy
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_6_12_stamp_value" />

                <com.appromobile.hotel.widgets.TextViewSFHeavy
                    android:id="@+id/tvStampValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/org"
                    android:textSize="@dimen/hotel_list_text_size_biger"/>
            </LinearLayout>

            <com.appromobile.hotel.widgets.TextViewSFHeavy
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_6_12_stamp_policy_condision" />

            <com.appromobile.hotel.widgets.TextViewSFMedium
                android:id="@+id/tvTermsOfUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
